# pakyas-cli

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GUIDE.md  LICENSE  README.md  build.rs  cliff.toml  justfile  lefthook.yml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  cli.rs  client.rs  config.rs  credentials.rs  cron.rs  error.rs  exit_codes.rs  external_monitors.rs  external_ping.rs  lib.rs  lock.rs  main.rs  output.rs  ua.rs  update_cache.rs
src/commands/: api_key.rs  auth.rs  auth_key.rs  check.rs  completion.rs  mod.rs  monitor.rs  org.rs  ping.rs  project.rs  update.rs
src/commands/check/: create.rs  crud.rs  doctor.rs  helpers.rs  inspect.rs  mod.rs  tail.rs  types.rs  update.rs
tests/: api_key_integration.rs  client_integration.rs
tests/common/: mod.rs
