[package]
name = "pakyas-cli"
version = "0.1.6"
edition = "2024"
rust-version = "1.85"
description = "CLI for Pakyas cron monitoring service"
license = "MIT"
repository = "https://github.com/pakyas/pakyas-cli"
homepage = "https://pakyas.com"
keywords = ["cli", "monitoring", "cron", "healthcheck"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pakyas"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Common types
uuid = { version = "1.18", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"

# Cron parsing (for local cron module)
cron = "0.15"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Configuration & storage
toml = "0.8"
directories = "5.0"

# Interactive prompts
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Output formatting
tabled = { version = "0.17", features = ["ansi"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Utilities
regex = "1"
hostname = "0.4"
open = "5.0"
urlencoding = "2.1"
semver = "1.0"
atty = "0.2"

# File locking
fs2 = "0.4"

# Self-update dependencies
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
futures-util = "0.3"
tempfile = "3.10"

[build-dependencies]
dotenvy = "0.15"

[dev-dependencies]
pretty_assertions = "1.4"
wiremock = "0.6"
tokio-test = "0.4"
serial_test = "3.0"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
clone_on_ref_ptr = "warn"
redundant_clone = "deny"
clone_on_copy = "warn"
assigning_clones = "warn"
large_types_passed_by_value = "warn"
boxed_local = "warn"
borrowed_box = "warn"
todo = "warn"
unimplemented = "warn"
